--- a/src/components/CreatorsDetails.astro
+++ b/src/components/CreatorsDetails.astro
@@ -2,7 +2,7 @@
 import AlanCreador from "../assets/AlanCastañeda-CREADORES.png";
 ---
 
-<div class="bg-principal min-h-screen w-full px-8 flex flex-col justify-center items-center py-36">
+<div class="bg-principal min-h-screen w-full px-8 flex flex-col justify-center items-center pt-36">
   <div class="text-2xl w-full">
     <h1 class="text-lime-400 font-tittle text-5xl sm:text-6xl md:text-7xl">Conoce</h1>
     <h1
