--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,12 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import HomeCinema from '../components/homeCinema.astro';
-import Aditional from '../components/Aditional.astro';
+import Carrousel from '../components/Carrousel.astro';
 ---
 
 <Layout>
   <HomeCinema />
-  <Aditional />
-  <Aditional />
-  <Aditional />
+  <Carrousel />
+  <Carrousel />
+  <Carrousel />
 </Layout>
