--- a/src/pages/details.astro
+++ b/src/pages/details.astro
@@ -1,14 +1,14 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import DetailScreen from '../components/DetailScreen.astro'
-import Aditional from '../components/Aditional.astro';
+import DetailScreen from '../components/DetailScreen.astro';
+import Carrousel from '../components/Carrousel.astro';
 import Production from '../components/Production.astro';
 import Cast from '../components/Cast.astro';
 ---
 
 <Layout>
 	<DetailScreen />
-	<Aditional />
+	<Carrousel />
 	<Production />
 	<Cast />
 </Layout>
