--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -62,12 +62,12 @@ onMount(() => {
 
     <!-- Desktop Menu -->
     <div class="hidden md:flex space-x-4 ml-20">
-      <a href="/details" class="nav-link hover:text-white text-gray-400 relative"
+      <!-- <a href="/details" class="nav-link hover:text-white text-gray-400 relative"
       >ARIADNE<span class="nav-underline"></span></a
       >
       <a href="/creators" class="nav-link hover:text-white text-gray-400 relative"
       >CREADORES<span class="nav-underline"></span></a
-      >
+      > -->
       <a href="/" class="nav-link hover:text-white text-gray-400 relative"
       >Cinema<span class="nav-underline"></span></a
       >
@@ -127,12 +127,12 @@ onMount(() => {
     class="hidden fixed top-16 left-0 w-full bg-secundario md:hidden z-40 transition-transform transform duration-300"
   >
     <div class="flex flex-col space-y-2 py-4 px-4 justify-center items-center">
-      <a href="/details" class="nav-link hover:text-gray-300 text-gray-400"
+      <!-- <a href="/details" class="nav-link hover:text-gray-300 text-gray-400"
         >ARIADNE</a
       >
       <a href="/creators" class="nav-link hover:text-gray-300 text-gray-400"
         >CREADORES</a
-      >
+      > -->
       <a href="/" class="nav-link hover:text-gray-300 text-gray-400">Cinema</a>
       <a href="/festivals" class="nav-link hover:text-gray-300 text-gray-400"
         >Festivales</a
