--- a/src/components/homeCinema.astro
+++ b/src/components/homeCinema.astro
@@ -9,25 +9,25 @@ const images = [
         src: detalle2Ariadne,
         alt: "Detalle Ariadne 2",
         title: "PELICULA 1",
-        route: "/pelicula1",
+        route: "/details",
     },
     {
         src: detalle3Ariadne,
         alt: "Detalle Ariadne 3",
         title: "PELICULA 2",
-        route: "/pelicula2",
+        route: "/details",
     },
     {
         src: detalle4Ariadne,
         alt: "Detalle Ariadne 4",
         title: "PELICULA 3",
-        route: "/pelicula3",
+        route: "/details",
     },
     {
         src: detalle5Ariadne,
         alt: "Detalle Ariadne 5",
         title: "PELICULA 4",
-        route: "/pelicula4",
+        route: "/details",
     },
 ];
 
@@ -109,25 +109,25 @@ const categories = ["Acción", "Comedia", "Drama", "Terror", "Ciencia Ficción",
             src: detalle2Ariadne,
             alt: "Detalle Ariadne 2",
             title: "PELICULA 1",
-            route: "/pelicula1",
+            route: "/details",
         },
         {
             src: detalle3Ariadne,
             alt: "Detalle Ariadne 3",
             title: "PELICULA 2",
-            route: "/pelicula2",
+            route: "/details",
         },
         {
             src: detalle4Ariadne,
             alt: "Detalle Ariadne 4",
             title: "PELICULA 3",
-            route: "/pelicula3",
+            route: "/details",
         },
         {
             src: detalle5Ariadne,
             alt: "Detalle Ariadne 5",
             title: "PELICULA 4",
-            route: "/pelicula4",
+            route: "/details",
         },
     ];
     let currentIndex = 0;
