se agrega seccion premiere lista en navbar, y se modifica el busqueda de genero con un mt porque se hizo mas grande el navbar

--- a/src/components/homeCinema.astro
+++ b/src/components/homeCinema.astro
@@ -37,7 +37,7 @@ const categories = ["Acción", "Comedia", "Drama", "Terror", "Ciencia Ficción",
 <div class="h-3/4 bg-principal relative">
     <div
         id="categoryBar"
-        class="fixed top-16 left-0 w-full bg-transparent text-black px-10 pb-2 pt-5 z-30 flex gap-5 justify-center lg:justify-start items-center transition-colors duration-300"
+        class="fixed top-16 left-0 w-full mt-5 bg-transparent text-black px-10 pb-2 pt-5 z-30 flex gap-5 justify-center lg:justify-start items-center transition-colors duration-300"
     >
         <h1 class="text-lime-400 font-tittle text-5xl lg:text-7xl">Cinema</h1>
         <select class="bg-white text-black rounded-md px-2 py-1 hover:bg-black hover:bg-opacity-30 hover:text-white lg:hover:border-2 hover:border-lime-400 cursor-pointer duration-100 focus:bg-black focus:bg-opacity-30 focus:text-white focus:border-2 focus:border-lime-400">
