se borraron unos archivos, agregue al footer la nueva seccion faq, se modifica el icono de la pestaña, y agregue un banner, tambien se agregan nuevos archivos y assets - imgs

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,7 @@
 ---
 import TermsAndConditions from "../pages/TermsAndConditions.astro";
 import PrivacyAdvise from "../pages/PrivacyAdvise.astro";
+import Faq from "../pages/faq.astro";
 ---
 
 <!-- <footer class="bg-gray-700 text-gray-300 py-4 bottom-0 w-full shadow-xl fixed botomm-0"> -->
@@ -15,6 +16,9 @@ import PrivacyAdvise from "../pages/PrivacyAdvise.astro";
     </div>
     <div class="lg:mx-1">
       <p><a href="/PrivacyAdvise">Aviso de Privacidad |</a></p>
+    </div>
+    <div class="lg:mx-1">
+      <p><a href="/faq">FAQ |</a></p>
     </div>
     <div class="lg:mx-1">
       <p>
