nombres de pestañas en footer completos

--- a/src/pages/TermsAndConditions.astro
+++ b/src/pages/TermsAndConditions.astro
@@ -1,7 +1,10 @@
 ---
 import Layout from "../layouts/Layout.astro";
 ---
-
+<head>
+    <meta charset="UTF-8" />
+    <title>Términos y Condiciones</title>
+</head>
 <Layout>
     <div class="bg-slate-900 px-5 py-10">
         <!-- Ajusta el margen superior para que el contenido no quede oculto -->
