--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -139,11 +139,12 @@ onMount(() => {
         CONTÁCTANOS
       </button>
 
-      <button
-        class="bg-transparent text-white font-semibold hover:text-lime-400 py-2 px-4 border border-gray-500 hover:border-transparent hover:bg-gray-500 duration-300 rounded-md"
+      <a
+        href="/login"
+        class="cursor-pointer bg-transparent text-white font-semibold hover:text-lime-400 py-2 px-4 border border-gray-500 hover:border-transparent hover:bg-gray-500 duration-300 rounded-md"
       >
         INGRESAR
-      </button>
+      </a>
     </div>
   </div>
 
